// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchAvailableDawlets fetches available dawlets 1`] = `
Array [
  Object {
    "description": "Algolet lets you write your own custom logic to generate music.",
    "localizable": true,
    "name": "@dawlet/algolet",
  },
  Object {
    "description": "Sheetlet displays the music represented as a sheetmusic.",
    "localizable": true,
    "name": "@dawlet/sheetlet",
  },
  Object {
    "description": "Synthlet provides a simple synthesizer to playback the music. It has a dedicated local transport on its own. ",
    "localizable": true,
    "name": "@dawlet/synthlet",
  },
]
`;

exports[`fetchAvailableDawlets reads dawlets folder 1`] = `
Array [
  "algolet",
  "sheetlet",
  "synthlet",
]
`;

exports[`retrieveDawletConfig gets dawlet config 1`] = `
Object {
  "description": "Algolet lets you write your own custom logic to generate music.",
  "localizable": true,
  "name": "@dawlet/algolet",
}
`;
